# qwenpad

./: ARCHITECTURE.md  CMakeLists.txt  test_close.cpp
src/App/src/: edittab.cpp  edittab.h  lineeditwidget.cpp  lineeditwidget.h  main.cpp  main.moc  notepadapp.cpp  notepadapp.h  qwenpad.cpp  qwenpad.h  syntaxhighlighter.cpp  syntaxhighlighter.h  tabmanager.cpp  tabmanager.h  utils.h
src/App/test/: test_qwenpad.cpp
